2010-05-03  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14282: t3lib_compressor processes JSlibs, even when it's not supposed to to (thanks to Steffen Gebert)
	* Fixed bug #14283: Loading scriptaculous with all modules fails with t3lib_compressor (thanks to Steffen Gebert)
	* Fixed bug #7795: opendocs: documents are opened without pagetree (thanks to Stefan Galinski)
	* Fixed bug #14144: Positioning of toolbar elements broken, especially in Safari (thanks to Stefan Galinski)

2010-05-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.4 to 1.1.5

2010-05-02  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.3 to 1.1.4

2010-05-02  Benjamin Mack  <benni@typo3.org>

	* Followup to #14195: Install icons referenced in install.css did not load anymore
	* Updated NEWS.txt to reflect the breaking changes of Extbase
	* Fixed bug #14276: tceforms: Title of a record does not use API call to limit the character
	* Added feature #13379: Introduced a Sprite Icon API to render icons from sprites (Thanks to Thomas Allmer and Steffen Ritter)

2010-05-02  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #14277: Improve t3lib_compressor (thanks to Steffen Gebert)
	* Fixed bug #14277: Improve t3lib_compressor (thanks to Steffen Gebert)
	* Fixed bug #14279: Some non-XHTML tags in Backend (thanks to Steffen Gebert)

2010-05-02  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 1.2.0beta1.

2010-05-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #2186: Error installing static_info_tables

2010-05-01  Benjamin Mack  <benni@typo3.org>

	* Followup to #14064: Removed unused functions to detect GDlib/TTF() in the installer
	* Fixed bug #14243: some notices, undefined index in tslib_fe.php (Thanks to Martin Mueller)
	* Followup to #14064: Textual change to the new install tool
	* Followup to #7501: Removed check for static templates from installer
